# pks_sem4_kr

./: README.md  pks_kr.sln
pks_kr/: .gitignore  CMakeLists.txt  game.h  main.cpp  neuro.cpp  nn.cpp  player.cpp  player.h  revolver.cpp  telegram.cpp  test_connection.cpp  test_connection.h  test_neuro.cpp  test_vk_bot.cpp  tgbottest.cpp
pks_kr/src/: contestant.cpp  contestant.h  game.cpp  nn.h  revolver.h  telegram.cpp  telegram.h  test_neuro.cpp  test_vk_bot.h
pks_kr/src/API/: telegram.cpp
pks_kr/src/contestants/: contestant.cpp  nn.cpp  player.cpp
pks_kr/src/game/: game.cpp  main.cpp
pks_kr/src/include/API/: telegram.h
pks_kr/src/include/contestants/: nn.h  player.h
pks_kr/src/include/game/: game.h
pks_kr/src/include/secret/: dotenv.h
pks_kr/src/secret/: dotenv.cpp
pks_kr/src/weapons/: revolver.cpp
pks_kr/tests/: CmakeLists.txt  scenario_contestant_state.cpp  scenario_player_status_variants.cpp  scenario_revolver_cycle.cpp  scenario_revolver_printmagazine.cpp  scenario_status_flow.cpp  test_API.cpp  test_nn.cpp  test_player.cpp  test_revolver.cpp
